Added ignore alert count value to rule files.

--- a/rules/plug_events.conf
+++ b/rules/plug_events.conf
@@ -1,6 +1,8 @@
 ### Enter monitoring rule for events separated by :::
 
 ### Example fields:
+
+### 0                     : Any number. Ignored in case of EVENT monitoring.
 ### plug-washing-machine  : Topic name from Tasmota WEB GUI under MQTT settings.
 ### __EVENT_MONITOR__     : Must be here for event monitoring (for example like ON/OFF switch, when topic suffix /POWER appears).
 ### /POWER                : Topic suffix to monitor event on.
@@ -8,5 +10,5 @@
 ### Text for email body. (payload data from event are appended at the end of the message always)
 
 ### Examples:
-# plug-washing-machine:::__EVENT_MONITOR__:::/POWER:::some.email@at.com:::Plug in bathroom is in state
+# 0:::plug-washing-machine:::__EVENT_MONITOR__:::/POWER:::some.email@at.com:::Plug in bathroom is in state
 
