--- a/rules/plug_values.conf
+++ b/rules/plug_values.conf
@@ -1,6 +1,8 @@
 ### Enter monitoring rule for values separated by :::
 
 ### Example fields:
+
+### 0                       : Any number. Count of alerts that shoud be ignored. Ignore peaks or use it as flapping protection.
 ### plug-washing-machine    : Topic name from Tasmota WEB GUI under MQTT settings.
 ### ENERGY-->Power          : JSON Path, where to read value. For this example, JSON looks like {"ENERGY": {"Power": 0}}
 ### >1                      : Fire alert when value is higher than 1 (number comparison could be > < =, string is always =)
@@ -9,9 +11,9 @@
 ### Text for email body when state is returned to normal. (When not specified, no notification will be sent. If __SYSTEM__ is filled in, system message with current values will be sent.)
 
 ### Examples:
-# plug-washing-machine:::ENERGY-->Power:::>0:::some.email@at.com:::Power consumption detected.:::Power consumption returned to zero.
-# plug-washing-machine:::ENERGY-->Power:::>1:::some.email@at.com:::__SYSTEM__:::__SYSTEM__
-# plug-washing-machine:::Some-->JSON-->Path-->SystemName:::=Tasmota:::some.email@at.com:::__SYSTEM__:::__SYSTEM__
-# plug-washing-machine:::ENERGY-->Power:::<3:::some.email@at.com:::Power consumption declined.
-# plug-washing-machine:::ENERGY-->Power:::>1500:::some.email@at.com:::The washing machine heats the water.:::Water heating is complete.
+# 0:::plug-washing-machine:::ENERGY-->Power:::>0:::some.email@at.com:::Power consumption detected.:::Power consumption returned to zero.
+# 0:::plug-washing-machine:::ENERGY-->Power:::>1:::some.email@at.com:::__SYSTEM__:::__SYSTEM__
+# 0:::plug-washing-machine:::Some-->JSON-->Path-->SystemName:::=Tasmota:::some.email@at.com:::__SYSTEM__:::__SYSTEM__
+# 3:::plug-washing-machine:::ENERGY-->Power:::<3:::some.email@at.com:::Power consumption declined.
+# 1:::plug-washing-machine:::ENERGY-->Power:::>1500:::some.email@at.com:::The washing machine heats the water.:::Water heating is complete.
 
