Added Telegram alerting option.

--- a/rules/plug_events.conf
+++ b/rules/plug_events.conf
@@ -2,13 +2,13 @@
 
 ### Example fields:
 
-### 0                     : Any number. Ignored in case of EVENT monitoring.
-### plug-washing-machine  : Topic name from Tasmota WEB GUI under MQTT settings.
-### __EVENT_MONITOR__     : Must be here for event monitoring (for example like ON/OFF switch, when topic suffix /POWER appears).
-### /POWER                : Topic suffix to monitor event on.
-### email addresses (optionally separated by ,)
-### Text for email body. (payload data from event are appended at the end of the message always)
+### 0                       : Any number. Ignored in case of EVENT monitoring.
+### plug-washing-machine    : Topic name from Tasmota WEB GUI under MQTT settings.
+### __EVENT_MONITOR__       : Must be here for event monitoring (for example like ON/OFF switch, when topic suffix /POWER appears).
+### /POWER                  : Topic suffix to monitor event on.
+### EMAIL_...,TELEGRAM_...  : Notification channels. Check notifications/ folder.
+### Text of notification. (payload data from events are appended at the end of the message always)
 
 ### Examples:
-# 0:::plug-washing-machine:::__EVENT_MONITOR__:::/POWER:::some.email@at.com:::Plug in bathroom is in state
+# 0:::plug-washing-machine:::__EVENT_MONITOR__:::/POWER:::EMAIL_PARENTS,TELEGRAM_HOME:::Plug in bathroom is in state
 
