--- a/rules/plug_values.conf
+++ b/rules/plug_values.conf
@@ -6,14 +6,14 @@
 ### plug-washing-machine    : Topic name from Tasmota WEB GUI under MQTT settings.
 ### ENERGY-->Power          : JSON Path, where to read value. For this example, JSON looks like {"ENERGY": {"Power": 0}}
 ### >1                      : Fire alert when value is higher than 1 (number comparison could be > < =, string is always =)
-### email addresses separated by , (when not specified, no notification will be sent)
-### Text for email body when alert is fired. (When not specified or __SYSTEM__ is filled in, system message with current values will be sent.)
-### Text for email body when state is returned to normal. (When not specified, no notification will be sent. If __SYSTEM__ is filled in, system message with current values will be sent.)
+### EMAIL_...,TELEGRAM_...  : Notification channels. Check notifications/ folder.
+### Text of notification when alert is fired. (When not specified or __SYSTEM__ is filled in, system message with current values will be sent.)
+### Text of notification when state is returned to normal. (When not specified, no notification will be sent. If __SYSTEM__ is filled in, system message with current values will be sent.)
 
 ### Examples:
-# 0:::plug-washing-machine:::ENERGY-->Power:::>0:::some.email@at.com:::Power consumption detected.:::Power consumption returned to zero.
-# 0:::plug-washing-machine:::ENERGY-->Power:::>1:::some.email@at.com:::__SYSTEM__:::__SYSTEM__
-# 0:::plug-washing-machine:::Some-->JSON-->Path-->SystemName:::=Tasmota:::some.email@at.com:::__SYSTEM__:::__SYSTEM__
-# 3:::plug-washing-machine:::ENERGY-->Power:::<3:::some.email@at.com:::Power consumption declined.
-# 1:::plug-washing-machine:::ENERGY-->Power:::>1500:::some.email@at.com:::The washing machine heats the water.:::Water heating is complete.
+# 0:::plug-washing-machine:::ENERGY-->Power:::>0:::EMAIL_PARENTS,TELEGRAM_HOME:::Power consumption detected.:::Power consumption returned to zero.
+# 0:::plug-washing-machine:::ENERGY-->Power:::>1:::TELEGRAM_HOME:::__SYSTEM__:::__SYSTEM__
+# 0:::plug-washing-machine:::Some-->JSON-->Path-->SystemName:::=Tasmota:::EMAIL_PARENTS:::__SYSTEM__:::__SYSTEM__
+# 3:::plug-washing-machine:::ENERGY-->Power:::<3:::EMAIL_PARENTS:::Power consumption declined.
+# 1:::plug-washing-machine:::ENERGY-->Power:::>1500:::EMAIL_PARENTS,TELEGRAM_HOME:::The washing machine heats the water.:::Water heating is complete.
 
